--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+setuptools>=65.0.0
+wheel>=0.37.0
 Django==5.2.7
 numpy==1.24.3
 tensorflow==2.13.0
 tensorflow-macos==2.13.0
 Pillow==12.0.0
-setuptools>=65.0.0
